Prevent wrapper heading from overflowing over form field label

--- a/resources/less/hakija.less
+++ b/resources/less/hakija.less
@@ -47,6 +47,7 @@
   font-weight: normal;
   text-transform: uppercase;
   position: absolute;
+  width: 245px;
 }
 .application__wrapper-contents {
   margin-top: 13px;
